// ============================================================
// Finance Golden Dataset - ERD
// Paste directly into https://dbdiagram.io/
// ============================================================
//
// STATUS: Contract v1.0 - implementation-frozen, pending external sign-off.
//
// Source alignment:
//   v3 execution scope locks Finance to:
//     accounts, transactions, ledger_entries, budgets, fx_rates
//   Finance is the highest-risk domain for deterministic exact-match because
//   FX conversion, rounding order, ledger signs, and decimal precision can
//   create numeric drift.
//
// Numeric precision:
//   Monetary amounts use DECIMAL(19, 4).
//   FX rates use DECIMAL(19, 6).
//   Generator logic and reference SQL must use fixed-point decimal semantics
//   and one shared rounding convention: ROUND_HALF_UP. Multiply first and
//   round once to monetary scale 4.
//
// Currency policy:
//   Account and transaction source currencies may vary. Finance v1.0 uses USD
//   as the sole target/reporting currency. fx_rates contains deterministic,
//   synthetic source-currency-to-USD rates; USD-to-USD is always 1.000000.
//   Supported source currencies:
//     USD | EUR | GBP | INR | JPY | CAD | AUD | CHF | SGD | AED
//
// Accounting policy:
//   5% of transactions intentionally have no ledger entries for the required
//   LEFT JOIN path. Ledger-backed transactions balance exactly at scale 4.
//   Reversals swap debit/credit orientation; rolling-balance SQL must not apply
//   a second reversal multiplier.
//
// Join semantics annotated:
//   INNER JOIN paths must produce non-empty results.
//   LEFT OUTER JOIN paths must produce at least one unmatched row.
//   Self-reference supports chart-of-accounts hierarchy questions.
//   FX lookup is a non-FK composite analytical relationship:
//     transactions.source_currency = fx_rates.from_currency
//     transactions.target_currency = fx_rates.to_currency
//     transactions.transaction_date = fx_rates.rate_date
//
// Required Finance join paths from v3 scope:
//   transactions LEFT JOIN ledger_entries
//   ledger_entries -> transactions
//   ledger_entries -> accounts
//   budgets -> accounts
//   accounts -> accounts through parent_account_id
//   transactions -> fx_rates by currency pair and date for FX-adjusted SUM
//
// Imperfection injection:
//   fx_rates.rate: NULLs 2-3% (domain's declared focus: missing FX rates)
//   transactions.transaction_date: configured boundary dates are injected
//   some transactions have zero ledger_entries to exercise LEFT JOIN behavior
//
// NOT-NULL rules:
//   INNER-JOIN FKs are NOT NULL:
//     ledger_entries.transaction_id
//     ledger_entries.account_id
//     budgets.account_id
//   LEFT-JOIN and optional analytical fields are nullable:
//     accounts.parent_account_id
//     ledger_entries.debit_amount
//     ledger_entries.credit_amount
//     fx_rates.rate
//
// Explicit many-to-many bridge:
//   transactions -> ledger_entries <- accounts
//   ledger_entries is both the double-entry fact table and the junction table
//   between transactions and chart-of-accounts rows. A surrogate entry_id is
//   retained because a transaction can post multiple lines to the same account
//   for different line_number/posting_type values.

// ------------------------------------------------------------
// ACCOUNTS
// ------------------------------------------------------------
Table accounts {
  account_id integer [pk, not null, note: 'Unique chart-of-accounts ID']
  account_number varchar(64) [not null, unique, note: 'Synthetic account number; no real-world mapping']
  account_name varchar(255) [not null]
  account_type varchar(32) [not null, note: 'enum: Asset | Liability | Equity | Revenue | Expense']
  account_subtype varchar(64) [note: 'Synthetic subtype for grouped financial reporting']
  currency_code char(3) [not null, note: 'Functional currency; enum: USD | EUR | GBP | INR | JPY | CAD | AUD | CHF | SGD | AED']
  parent_account_id integer [ref: > accounts.account_id, note: 'Nullable self-reference; root accounts have NULL parent']
  normal_balance varchar(16) [not null, note: 'enum: Debit | Credit']
  is_active boolean [not null, default: true]
  created_at timestamp [not null]

  Note: 'Reference / lookup - Chart of Accounts. Target 200 rows. Supports hierarchy, rolling balance, and budget-vs-actual questions.'
}

// ------------------------------------------------------------
// TRANSACTIONS
// ------------------------------------------------------------
Table transactions {
  transaction_id integer [pk, not null, note: 'Unique transaction ID']
  transaction_date date [not null, note: 'Boundary-date imperfection focus; configured dates are deterministically injected']
  description varchar(1024)
  source_system varchar(32) [not null, note: 'enum: ERP | Billing | Payroll | Expense | Manual']
  source_currency char(3) [not null, note: 'From-currency for FX lookup; enum: USD | EUR | GBP | INR | JPY | CAD | AUD | CHF | SGD | AED']
  target_currency char(3) [not null, default: 'USD', note: 'Fixed reporting currency: USD']
  total_amount decimal(19, 4) [not null, note: 'Positive fixed-point monetary amount; Pareto alpha=1.16']
  reversed boolean [not null, default: false]
  posted_at timestamp [not null]

  Note: 'Fact - target 100,000 rows. Some transactions intentionally have zero ledger_entries, so transactions LEFT JOIN ledger_entries must produce unmatched rows.'
}

// ------------------------------------------------------------
// LEDGER_ENTRIES
// ------------------------------------------------------------
Table ledger_entries {
  entry_id integer [pk, not null, note: 'Unique ledger entry line ID']
  transaction_id integer [not null, ref: > transactions.transaction_id, note: 'INNER JOIN path - NOT NULL']
  account_id integer [not null, ref: > accounts.account_id, note: 'INNER JOIN path - NOT NULL']
  line_number integer [not null, note: 'Line number within the transaction posting']
  debit_amount decimal(19, 4) [note: 'Nullable; an entry is either debit or credit, not both']
  credit_amount decimal(19, 4) [note: 'Nullable; an entry is either credit or debit, not both']
  currency_code char(3) [not null, note: 'Posting currency; enum: USD | EUR | GBP | INR | JPY | CAD | AUD | CHF | SGD | AED']
  posting_type varchar(32) [not null, note: 'enum: Standard | Adjustment | Accrual | Reversal']
  created_at timestamp [not null]

  indexes {
    (transaction_id, line_number) [unique, name: 'uq_ledger_entries_transaction_line']
  }

  Note: 'Fact / junction table - target 200,000 rows, approximately 2 entries per transaction. Exactly one positive debit or credit is populated per row. Supports double-entry validation and transaction/account many-to-many joins.'
}

// ------------------------------------------------------------
// BUDGETS
// ------------------------------------------------------------
Table budgets {
  budget_id integer [pk, not null, note: 'Unique budget row ID']
  account_id integer [not null, ref: > accounts.account_id, note: 'INNER JOIN path - NOT NULL']
  fiscal_year integer [not null]
  period_start date [not null]
  period_end date [not null]
  budget_amount decimal(19, 4) [not null, note: 'Fixed-point budget amount']
  currency_code char(3) [not null, default: 'USD', note: 'Fixed reporting currency: USD']
  scenario varchar(32) [not null, note: 'enum: Approved | Forecast | Stretch']
  created_at timestamp [not null]

  Note: 'Reference / planning table - target 800 rows, approximately 200 accounts by 4 quarters. Supports budget vs actual joins through accounts.'
}

// ------------------------------------------------------------
// FX_RATES
// ------------------------------------------------------------
Table fx_rates {
  rate_id integer [pk, not null, note: 'Unique FX rate row ID']
  from_currency char(3) [not null, note: 'Source currency; enum: USD | EUR | GBP | INR | JPY | CAD | AUD | CHF | SGD | AED']
  to_currency char(3) [not null, default: 'USD', note: 'Fixed target/reporting currency: USD']
  rate_date date [not null, note: 'Rate effective date; joins analytically to transactions.transaction_date']
  rate decimal(19, 6) [note: 'Nullable; domain imperfection focus: missing FX quotes']
  rate_source varchar(32) [not null, note: 'enum: ECB | Fed | Treasury | Synthetic']
  is_estimated boolean [not null, default: false]
  created_at timestamp [not null]

  indexes {
    (from_currency, to_currency, rate_date) [unique, name: 'uq_fx_rates_currency_date']
  }

  Note: 'Reference / lookup - target 3,650 rows, approximately 10 currency pairs by 365 days. Rates are positive when populated. Joined by unique from_currency, to_currency, and rate_date as a non-FK composite lookup.'
}

// ------------------------------------------------------------
// ANALYTICAL / NON-FK RELATIONSHIPS
// ------------------------------------------------------------
// dbdiagram.io cannot express the full composite FX lookup:
//   transactions.source_currency = fx_rates.from_currency
//   AND transactions.target_currency = fx_rates.to_currency
//   AND transactions.transaction_date = fx_rates.rate_date
// No Ref is drawn because the relationship is not a physical foreign key and
// no single participating column is unique. Drawing separate currency links
// would imply false cardinality and omit the required rate_date predicate.
// Validation and query generation must enforce the complete composite lookup.
